--- a/f2e/package.json
+++ b/f2e/package.json
@@ -11,7 +11,7 @@
   "author": "zcl",
   "license": "ISC",
   "devDependencies": {
-    "antd": "^0.12.8",
+    "antd": "^0.12.10",
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
@@ -20,16 +20,25 @@
     "css-loader": "^0.23.1",
     "echarts": "^3.1.2",
     "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.7",
+    "react-dnd": "^2.1.3",
     "react-dom": "^0.14.7",
+    "react-dragula": "^1.1.15",
+    "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
+    "react-router-redux": "^4.0.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.2",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.9.1"
+    "webpack-hot-middleware": "^2.9.1",
+    "sass-loader": "^3.2.0",
+    "node-sass": "^3.4.2"
   }
 }
