--- a/f2e/.babelrc
+++ b/f2e/.babelrc
@@ -1,8 +1,9 @@
 {
-  "presets": ["react", "es2015"],
+  "presets": ["react", "es2015","stage-0"],
   "env": {
     "development": {
       "plugins": [
+        "transform-decorators-legacy",
         ["react-transform", {
           "transforms": [{
             "transform": "react-transform-hmr",
