--- a/f2e/package.json
+++ b/f2e/package.json
@@ -15,13 +15,19 @@
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
     "echarts": "^3.1.2",
     "express": "^4.13.4",
     "isomorphic-fetch": "^2.2.1",
+    "node-sass": "^3.4.2",
     "react": "^0.14.7",
+    "react-dnd": "^2.1.3",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
     "react-dragula": "^1.1.15",
     "react-redux": "^4.4.0",
@@ -32,12 +38,11 @@
     "redbox-react": "^1.2.2",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.9.1",
-    "sass-loader": "^3.2.0",
-    "node-sass": "^3.4.2"
+    "webpack-hot-middleware": "^2.9.1"
   }
 }
