--- a/f2e/.babelrc
+++ b/f2e/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": ["react", "es2015","stage-0"],
+  "plugins":["transform-decorators-legacy"],
   "env": {
     "development": {
       "plugins": [
-        "transform-decorators-legacy",
         ["react-transform", {
           "transforms": [{
             "transform": "react-transform-hmr",
