--- a/f2e/package.json
+++ b/f2e/package.json
@@ -4,7 +4,7 @@
   "description": "问卷系统",
   "main": "index.js",
   "scripts": {
-    "build:webpack": "set NODE_ENV=production && webpack  --config webpack.config.prod.js --colors --profile",
+    "build:webpack": "set NODE_ENV=production && webpack  --config webpack.config.prod.js --progress  --colors --profile ",
     "start": "node server.js",
     "build": "npm run build:webpack"
   },
@@ -27,6 +27,7 @@
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^3.4.2",
     "react": "^0.14.7",
+    "react-color": "^2.0.0",
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
