--- a/f2e/package.json
+++ b/f2e/package.json
@@ -46,5 +46,8 @@
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.9.1"
+  },
+  "dependencies": {
+    "extract-text-webpack-plugin": "^1.0.1"
   }
 }
