--- a/f2e/package.json
+++ b/f2e/package.json
@@ -4,14 +4,16 @@
   "description": "问卷系统",
   "main": "index.js",
   "scripts": {
-    "build:webpack": "set NODE_ENV=production && webpack  --config webpack.config.prod.js --progress  --colors --profile ",
+    "build:webpack1": "set NODE_ENV=production && webpack  --config webpack.config.prod.wj.js --progress  --colors --profile ",
+    "build:webpack2": "set NODE_ENV=production && webpack  --config webpack.config.prod.admin.js --progress  --colors --profile ",
     "start": "node server.js",
-    "build": "npm run build:webpack"
+    "build1": "npm run build:webpack1",
+    "build2": "npm run build:webpack2"
   },
   "author": "zcl",
   "license": "ISC",
   "devDependencies": {
-    "antd": "^0.12.10",
+    "antd": "^0.12.13",
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
@@ -20,17 +22,18 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "body-parser": "^1.15.0",
     "css-loader": "^0.23.1",
     "echarts": "^3.1.2",
     "express": "^4.13.4",
     "fetch-jsonp": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^3.4.2",
-    "react": "^0.14.7",
+    "react": "^15.0.1",
     "react-color": "^2.0.0",
     "react-dnd": "^2.1.3",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^0.14.7",
+    "react-dom": "^15.0.1",
     "react-dragula": "^1.1.15",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
