修改前台样式

--- a/f2e/package.json
+++ b/f2e/package.json
@@ -13,44 +13,44 @@
   "author": "zcl",
   "license": "ISC",
   "devDependencies": {
-    "antd": "^0.12.13",
-    "babel-core": "^6.7.0",
+    "react-dnd": "^2.1.4",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.3.0",
+    "react-router-redux": "^4.0.4",
+    "react-color": "^2.0.0",
+    "react-dnd-html5-backend": "^2.1.2",
+    "redbox-react": "^1.2.3",
+    "react-dragula": "^1.1.15",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "redux-thunk": "^2.0.1",
+    "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
     "body-parser": "^1.15.0",
     "css-loader": "^0.23.1",
-    "echarts": "^3.1.2",
     "express": "^4.13.4",
     "fetch-jsonp": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "node-sass": "^3.4.2",
-    "react": "^15.0.1",
-    "react-color": "^2.0.0",
-    "react-dnd": "^2.1.3",
-    "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.0.1",
-    "react-dragula": "^1.1.15",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.2.2",
-    "redux": "^3.3.1",
-    "redux-thunk": "^2.0.1",
     "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.9.1"
+    "style-loader": "^0.13.1",
+    "node-sass": "^3.6.0",
+    "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "redux": "^3.5.2"
   },
   "dependencies": {
-    "extract-text-webpack-plugin": "^1.0.1"
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "antd": "^0.12.16",
+    "echarts": "^3.1.7",
+    "dragula": "^3.6.8"
   }
 }
